# api/base.go
@@ -3,7 +3,6 @@ package api
 import (
 	"net/http"
 
-	"github.com/toxic-development/sysmanix/api/auth"
 	"github.com/toxic-development/sysmanix/api/base"
 )
 
@@ -11,5 +10,4 @@ import (
 func registerBaseRoutes(mux *http.ServeMux) {
 	// Public endpoints
 	registerRouteWithMiddleware(mux, "health", base.HealthHandler, false, nil)
-	registerRouteWithMiddleware(mux, "auth/login", auth.LoginHandler, false, nil)
 }
